<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ersiver.gymific.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorBackground"
        tools:context=".ui.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/overview_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_set_favourite"
                app:navigationIcon="@drawable/ic_back"
                app:title="@{viewModel.workout.title}" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/overview_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_detail">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_0_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/workout_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_img_height"
                        android:contentDescription="@string/content_description_category_arms"
                        android:scaleType="centerCrop"
                        app:srcImage="@{viewModel.workout.iconCode}"
                        tools:src="@drawable/legs_a" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/dim_2">

                        <TextView
                            android:id="@+id/workout_instruction"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dim_1"
                            android:text="@{viewModel.workout.instruction}"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            android:textColor="?android:attr/textColorSecondary"
                            tools:text="Lift a leg up and parallel to floor. Draw knee in toward abdoment." />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dim_2"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/play_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?android:selectableItemBackground"
                                android:contentDescription="@string/content_description_play"
                                android:onClick="@{()->viewModel.startTimer()}"
                                android:padding="@dimen/dim_1"
                                android:src="@drawable/ic_play" />

                            <ImageButton
                                android:id="@+id/pause_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?android:selectableItemBackground"
                                android:contentDescription="@string/content_description_pause"
                                android:onClick="@{()-> viewModel.pauseTimer()}"
                                android:padding="@dimen/dim_1"
                                android:src="@drawable/ic_pause" />

                            <ImageButton
                                android:id="@+id/stop_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="?android:selectableItemBackground"
                                android:contentDescription="@string/content_description_stop"
                                android:onClick="@{()->viewModel.resetTimer()}"
                                android:padding="@dimen/dim_1"
                                android:src="@drawable/ic_stop" />
                        </LinearLayout>

                        <com.ersiver.gymific.ui.detail.WorkoutProgressBar
                            android:id="@+id/workout_progress"
                            android:layout_width="255dp"
                            android:layout_height="256dp"
                            android:layout_marginBottom="@dimen/dim_2" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
